Refatoração do tratamento de cookies e da configuração CORS para produção
- Substituímos o uso de `Cookie` por `ResponseCookie` para maior flexibilidade e segurança, incluindo a configuração SameSite para requisições entre sites.

- Atualizamos as configurações CORS para suportar URLs dinâmicas do frontend a partir de `application.properties` (`FRONTEND_URL`), com fallback para localhost.

- Removemos as anotações `@CrossOrigin` fixas nos controladores.

- Adicionamos propriedades de configuração em `application.properties` para configurações específicas de cada ambiente (CORS, JWT, banco de dados e APIs externas).